# icalendar-searcher

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  icalendar-6.3.2-py3-none-any.whl  pyproject.toml
.github/workflows/: ci.yaml  linkcheck.yml  publish.yaml
scripts/: release.sh
src/icalendar_searcher/: __init__.py  collation.py  filters.py  searcher.py  utils.py
tests/: README.md  test_alarms.py  test_check_component.py  test_check_component_basic.py  test_collation.py  test_date_only_events.py  test_expand_only.py  test_filter_method.py  test_property_filtering.py  test_recurrence.py  test_recurring_todo_exceptions.py  test_searcher.py  test_sort_method.py  test_sorting_value.py  test_unicode.py  test_validate_and_normalize_component.py
