[project]
name = "icalendar-searcher"
version = "0.0.0"
description = ""
authors = [
    {name = "Tobias Brox",email = "tobias@redpill-linpro.com"}
]
## caldav still supports 3.9, so we would definitively like
## to support python 3.9 for a while.  However, the precommit
## logic I just threw in requires me to officially ditch 3.9-support.
## I guess the caldav tests will still exercise this library with 3.9.
requires-python = ">=3.9,<4.0"

[project.urls]
Repository = "https://github.com/python-caldav/icalendar-searcher"
Issues = "https://github.com/python-caldav/icalendar-searcher/issues"
#Documentation = "https://icalendar-searcher.readthedocs.io/"
#Changelog = "https://github.com/python-caldav/icalendar-searcher/master/CHANGELOG.md"

[tool.poetry]
name = "icalendar-searcher"
version = "0.0.0"
description = "Search, filter and sort iCalendar components"
authors = ["Tobias Brox <tobias@redpill-linpro.com>"]
readme = "README.md"
packages = [{include = "icalendar_searcher", from = "src"}]

[tool.poetry.dependencies]
icalendar = ">=6.0"
recurring-ical-events = ">=3.8.0"

[tool.poetry.extras]
collation = ["PyICU"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "pytest (>=8.0.0,<10.0.0)",
    "PyICU"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ANN"]
ignore = ["E501", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["icalendar_searcher"]
