[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "icalendar-searcher"
dynamic = ["version"]
description = "Search, filter and sort iCalendar components"
readme = "README.md"
## The recurring-ical-events >=3.8.0 dependency transitively requires
## click >=8.3.1 (via x-wr-timezone) which only supports Python >=3.10.
## The caldav library's own CI still exercises this library with Python 3.9.
requires-python = ">=3.10,<4.0"
license = {text = "AGPL-3.0-or-later"}
authors = [{ name = "Tobias Brox", email = "tobias@redpill-linpro.com" }]
dependencies = [
    "icalendar>=6.0",
    "recurring-ical-events>=3.8.0",
]

[project.optional-dependencies]
collation = ["PyICU"]
dev = [
    "ruff",
    "pre-commit",
    "pytest>=8.0.0,<10.0.0",
    "PyICU",
    "deptry>=0.24.0",
]

[project.urls]
Repository = "https://github.com/python-caldav/icalendar-searcher"
Issues = "https://github.com/python-caldav/icalendar-searcher/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/icalendar_searcher/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/icalendar_searcher"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ANN"]
ignore = ["E501", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["icalendar_searcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry.per_rule_ignores]
DEP004 = ["icu"]  # PyICU is optional (collation extra), also in dev for testing
DEP002 = ["ruff", "pre-commit", "pytest", "deptry"]  # dev tools, not imported in source
